completed Details modal page.

--- a/SwiftMed/Base.lproj/Main.storyboard
+++ b/SwiftMed/Base.lproj/Main.storyboard
@@ -68,7 +68,7 @@
                                                         <constraint firstAttribute="width" constant="80" id="T2K-4v-vCD"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CKy-iY-c0e">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CKy-iY-c0e">
                                                     <rect key="frame" x="12" y="45.5" width="255" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -156,23 +156,78 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M9u-ok-yDQ">
-                                <rect key="frame" x="12" y="426" width="390" height="21.5"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                <rect key="frame" x="12" y="426" width="390" height="23"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="IJH-y7-PKn" userLabel="imageIndicator">
                                 <rect key="frame" x="188.5" y="188.5" width="37" height="37"/>
                             </activityIndicatorView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dot" translatesAutoresizingMaskIntoConstraints="NO" id="uDv-Pb-Fnp">
+                                <rect key="frame" x="12" y="461" width="18" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="18" id="Bpp-Py-gH1"/>
+                                    <constraint firstAttribute="width" secondItem="uDv-Pb-Fnp" secondAttribute="height" id="EUy-GD-i07"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 hours ago" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tKG-Za-zdb">
+                                <rect key="frame" x="38" y="459.5" width="91" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ibg-b6-aqu">
+                                <rect key="frame" x="12" y="488.5" width="390" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sz5-BU-IjR" userLabel="BackButton">
+                                <rect key="frame" x="30" y="55" width="50" height="25.5"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="GLJ-7n-wda"/>
+                                    <constraint firstAttribute="height" constant="35" id="lrg-Vk-2EV"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" backgroundImage="chevron.down" catalog="system"/>
+                                <connections>
+                                    <action selector="onBackBtn:" destination="X6d-r4-oiH" eventType="touchUpInside" id="wyY-tf-HoV"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9l3-j4-AXz">
+                                <rect key="frame" x="0.0" y="762" width="414" height="80"/>
+                                <color key="backgroundColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="6aS-fq-jf0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="contentEdgeInsets" minX="0.0" minY="-20" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="Read the entire article" image="arrow.right.to.line.alt" catalog="system"/>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="uDv-Pb-Fnp" firstAttribute="top" secondItem="M9u-ok-yDQ" secondAttribute="bottom" constant="12" id="46q-3j-A1v"/>
+                            <constraint firstItem="sz5-BU-IjR" firstAttribute="leading" secondItem="ePi-uW-i5S" secondAttribute="leading" constant="30" id="4HA-09-C62"/>
+                            <constraint firstAttribute="bottom" secondItem="9l3-j4-AXz" secondAttribute="bottom" id="9g0-ZZ-BBf"/>
                             <constraint firstItem="M9u-ok-yDQ" firstAttribute="leading" secondItem="ePi-uW-i5S" secondAttribute="leading" constant="12" id="FwO-HT-5vf"/>
                             <constraint firstItem="ePi-uW-i5S" firstAttribute="trailing" secondItem="M9u-ok-yDQ" secondAttribute="trailing" constant="12" id="G2P-Rp-bbh"/>
+                            <constraint firstItem="Ibg-b6-aqu" firstAttribute="top" secondItem="tKG-Za-zdb" secondAttribute="bottom" constant="8" id="K5k-C9-EuO"/>
                             <constraint firstItem="M9u-ok-yDQ" firstAttribute="top" secondItem="rON-kj-5bH" secondAttribute="bottom" constant="12" id="K7h-Kz-4FT"/>
+                            <constraint firstItem="Ibg-b6-aqu" firstAttribute="leading" secondItem="ePi-uW-i5S" secondAttribute="leading" constant="12" id="MMT-Mz-Wwn"/>
+                            <constraint firstItem="uDv-Pb-Fnp" firstAttribute="leading" secondItem="ePi-uW-i5S" secondAttribute="leading" constant="12" id="Q4z-33-Udw"/>
+                            <constraint firstItem="sz5-BU-IjR" firstAttribute="top" secondItem="ePi-uW-i5S" secondAttribute="top" constant="50" id="SYQ-qP-9Gd"/>
+                            <constraint firstItem="9l3-j4-AXz" firstAttribute="leading" secondItem="ePi-uW-i5S" secondAttribute="leading" id="deM-TW-J5F"/>
+                            <constraint firstItem="tKG-Za-zdb" firstAttribute="leading" secondItem="uDv-Pb-Fnp" secondAttribute="trailing" constant="8" id="gH4-8Q-7Sg"/>
                             <constraint firstItem="IJH-y7-PKn" firstAttribute="centerX" secondItem="rON-kj-5bH" secondAttribute="centerX" id="jrH-Uz-iYn"/>
                             <constraint firstItem="rON-kj-5bH" firstAttribute="top" secondItem="ePi-uW-i5S" secondAttribute="top" id="lL8-tO-WdX"/>
+                            <constraint firstItem="ePi-uW-i5S" firstAttribute="trailing" secondItem="Ibg-b6-aqu" secondAttribute="trailing" constant="12" id="nYQ-3v-uuN"/>
+                            <constraint firstItem="tKG-Za-zdb" firstAttribute="centerY" secondItem="uDv-Pb-Fnp" secondAttribute="centerY" id="pZn-wC-c6c"/>
                             <constraint firstItem="rON-kj-5bH" firstAttribute="leading" secondItem="ePi-uW-i5S" secondAttribute="leading" id="q3W-gx-4hj"/>
+                            <constraint firstItem="ePi-uW-i5S" firstAttribute="trailing" secondItem="9l3-j4-AXz" secondAttribute="trailing" id="t8r-py-l4f"/>
                             <constraint firstItem="IJH-y7-PKn" firstAttribute="centerY" secondItem="rON-kj-5bH" secondAttribute="centerY" id="xmZ-Tx-5gD"/>
                             <constraint firstItem="ePi-uW-i5S" firstAttribute="trailing" secondItem="rON-kj-5bH" secondAttribute="trailing" id="yUl-bu-RDc"/>
                         </constraints>
@@ -180,17 +235,23 @@
                     </view>
                     <navigationItem key="navigationItem" id="yRZ-3K-nan"/>
                     <connections>
+                        <outlet property="btnReadMore" destination="9l3-j4-AXz" id="n1q-Oc-Qvg"/>
                         <outlet property="image" destination="rON-kj-5bH" id="Tl4-9J-yMw"/>
                         <outlet property="imageIndicator" destination="IJH-y7-PKn" id="3sx-nZ-73s"/>
+                        <outlet property="lblDescription" destination="Ibg-b6-aqu" id="9ku-WQ-huD"/>
+                        <outlet property="lblTime" destination="tKG-Za-zdb" id="Ibl-Pb-MOh"/>
                         <outlet property="lblTitle" destination="M9u-ok-yDQ" id="PSl-U6-oES"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iUe-Iu-KgE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="822" y="138"/>
+            <point key="canvasLocation" x="821.73913043478262" y="137.94642857142856"/>
         </scene>
     </scenes>
     <resources>
         <image name="SwiftMedlogo" width="486" height="96"/>
+        <image name="arrow.right.to.line.alt" catalog="system" width="64" height="44"/>
+        <image name="chevron.down" catalog="system" width="64" height="36"/>
+        <image name="dot" width="512" height="512"/>
     </resources>
 </document>
