--- a/SwiftMed/Base.lproj/Main.storyboard
+++ b/SwiftMed/Base.lproj/Main.storyboard
@@ -56,42 +56,43 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="je7-NA-yPN">
-                                                    <rect key="frame" x="20" y="16" width="239" height="21.5"/>
+                                                    <rect key="frame" x="30" y="16" width="219" height="21.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uPC-Yu-mX6">
-                                                    <rect key="frame" x="271" y="16" width="80" height="80"/>
+                                                    <rect key="frame" x="261" y="16" width="80" height="80"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="uPC-Yu-mX6" secondAttribute="height" id="D6B-Km-eJn"/>
                                                         <constraint firstAttribute="width" constant="80" id="T2K-4v-vCD"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CKy-iY-c0e">
-                                                    <rect key="frame" x="20" y="45.5" width="239" height="17"/>
+                                                    <rect key="frame" x="30" y="45.5" width="219" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ya-We-ul3">
-                                                    <rect key="frame" x="20" y="147.5" width="38" height="14.5"/>
+                                                    <rect key="frame" x="30" y="147.5" width="311" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="vcv-N1-MXi">
-                                                    <rect key="frame" x="301" y="46" width="20" height="20"/>
+                                                    <rect key="frame" x="291" y="46" width="20" height="20"/>
                                                 </activityIndicatorView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="CKy-iY-c0e" firstAttribute="leading" secondItem="Hlg-Az-8Sj" secondAttribute="leading" constant="20" id="2xr-3O-ZMo"/>
+                                                <constraint firstItem="CKy-iY-c0e" firstAttribute="leading" secondItem="Hlg-Az-8Sj" secondAttribute="leading" constant="30" id="2xr-3O-ZMo"/>
                                                 <constraint firstItem="CKy-iY-c0e" firstAttribute="top" secondItem="je7-NA-yPN" secondAttribute="bottom" constant="8" id="I4h-bh-anw"/>
-                                                <constraint firstItem="1ya-We-ul3" firstAttribute="leading" secondItem="Hlg-Az-8Sj" secondAttribute="leading" constant="20" id="RJs-Cq-8dJ"/>
+                                                <constraint firstAttribute="trailing" secondItem="1ya-We-ul3" secondAttribute="trailing" constant="30" id="Pqt-Xr-zqt"/>
+                                                <constraint firstItem="1ya-We-ul3" firstAttribute="leading" secondItem="Hlg-Az-8Sj" secondAttribute="leading" constant="30" id="RJs-Cq-8dJ"/>
                                                 <constraint firstItem="je7-NA-yPN" firstAttribute="top" secondItem="Hlg-Az-8Sj" secondAttribute="top" constant="16" id="YS3-Rb-hko"/>
                                                 <constraint firstItem="uPC-Yu-mX6" firstAttribute="leading" secondItem="je7-NA-yPN" secondAttribute="trailing" constant="12" id="ej5-Ph-rnW"/>
-                                                <constraint firstItem="je7-NA-yPN" firstAttribute="leading" secondItem="Hlg-Az-8Sj" secondAttribute="leading" constant="20" id="jWy-5k-XwH"/>
-                                                <constraint firstAttribute="trailing" secondItem="uPC-Yu-mX6" secondAttribute="trailing" constant="20" id="lrm-Hw-9TJ"/>
+                                                <constraint firstItem="je7-NA-yPN" firstAttribute="leading" secondItem="Hlg-Az-8Sj" secondAttribute="leading" constant="30" id="jWy-5k-XwH"/>
+                                                <constraint firstAttribute="trailing" secondItem="uPC-Yu-mX6" secondAttribute="trailing" constant="30" id="lrm-Hw-9TJ"/>
                                                 <constraint firstItem="CKy-iY-c0e" firstAttribute="width" secondItem="je7-NA-yPN" secondAttribute="width" id="qQS-lv-cgi"/>
                                                 <constraint firstAttribute="bottom" secondItem="1ya-We-ul3" secondAttribute="bottom" constant="16" id="vJa-KV-aFq"/>
                                                 <constraint firstItem="uPC-Yu-mX6" firstAttribute="centerY" secondItem="vcv-N1-MXi" secondAttribute="centerY" id="vdF-aF-7RV"/>
