--- a/SwiftMed/Base.lproj/Main.storyboard
+++ b/SwiftMed/Base.lproj/Main.storyboard
@@ -35,68 +35,68 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ztD-Hm-Lg9">
-                                <rect key="frame" x="16" y="145" width="382" height="709"/>
+                                <rect key="frame" x="0.0" y="145" width="414" height="709"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="9TB-s6-nBq">
-                                    <size key="itemSize" width="371" height="178"/>
+                                    <size key="itemSize" width="300" height="178"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <activityIndicatorView key="backgroundView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" id="zr4-rH-Crt">
-                                    <rect key="frame" x="0.0" y="0.0" width="382" height="709"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="709"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </activityIndicatorView>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="NewsCell" id="h2A-qo-mCI" customClass="NewsCollectionViewCell" customModule="SwiftMed" customModuleProvider="target">
-                                        <rect key="frame" x="5.5" y="0.0" width="371" height="178"/>
+                                        <rect key="frame" x="21.5" y="0.0" width="371" height="178"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Hlg-Az-8Sj">
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="vNz-cz-Ltn">
                                             <rect key="frame" x="0.0" y="0.0" width="371" height="178"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="je7-NA-yPN">
-                                                    <rect key="frame" x="30" y="16" width="219" height="21.5"/>
+                                                    <rect key="frame" x="16" y="16" width="247" height="21.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uPC-Yu-mX6">
-                                                    <rect key="frame" x="261" y="16" width="80" height="80"/>
+                                                    <rect key="frame" x="275" y="16" width="80" height="80"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="uPC-Yu-mX6" secondAttribute="height" id="D6B-Km-eJn"/>
                                                         <constraint firstAttribute="width" constant="80" id="T2K-4v-vCD"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CKy-iY-c0e">
-                                                    <rect key="frame" x="30" y="45.5" width="219" height="17"/>
+                                                    <rect key="frame" x="16" y="45.5" width="247" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ya-We-ul3">
-                                                    <rect key="frame" x="30" y="147.5" width="311" height="14.5"/>
+                                                    <rect key="frame" x="16" y="147.5" width="339" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="vcv-N1-MXi">
-                                                    <rect key="frame" x="291" y="46" width="20" height="20"/>
+                                                    <rect key="frame" x="305" y="46" width="20" height="20"/>
                                                 </activityIndicatorView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="CKy-iY-c0e" firstAttribute="leading" secondItem="Hlg-Az-8Sj" secondAttribute="leading" constant="30" id="2xr-3O-ZMo"/>
+                                                <constraint firstItem="CKy-iY-c0e" firstAttribute="leading" secondItem="vNz-cz-Ltn" secondAttribute="leading" constant="16" id="2xr-3O-ZMo"/>
                                                 <constraint firstItem="CKy-iY-c0e" firstAttribute="top" secondItem="je7-NA-yPN" secondAttribute="bottom" constant="8" id="I4h-bh-anw"/>
-                                                <constraint firstAttribute="trailing" secondItem="1ya-We-ul3" secondAttribute="trailing" constant="30" id="Pqt-Xr-zqt"/>
-                                                <constraint firstItem="1ya-We-ul3" firstAttribute="leading" secondItem="Hlg-Az-8Sj" secondAttribute="leading" constant="30" id="RJs-Cq-8dJ"/>
-                                                <constraint firstItem="je7-NA-yPN" firstAttribute="top" secondItem="Hlg-Az-8Sj" secondAttribute="top" constant="16" id="YS3-Rb-hko"/>
+                                                <constraint firstAttribute="trailing" secondItem="1ya-We-ul3" secondAttribute="trailing" constant="16" id="Pqt-Xr-zqt"/>
+                                                <constraint firstItem="1ya-We-ul3" firstAttribute="leading" secondItem="vNz-cz-Ltn" secondAttribute="leading" constant="16" id="RJs-Cq-8dJ"/>
+                                                <constraint firstItem="je7-NA-yPN" firstAttribute="top" secondItem="vNz-cz-Ltn" secondAttribute="top" constant="16" id="YS3-Rb-hko"/>
                                                 <constraint firstItem="uPC-Yu-mX6" firstAttribute="leading" secondItem="je7-NA-yPN" secondAttribute="trailing" constant="12" id="ej5-Ph-rnW"/>
-                                                <constraint firstItem="je7-NA-yPN" firstAttribute="leading" secondItem="Hlg-Az-8Sj" secondAttribute="leading" constant="30" id="jWy-5k-XwH"/>
-                                                <constraint firstAttribute="trailing" secondItem="uPC-Yu-mX6" secondAttribute="trailing" constant="30" id="lrm-Hw-9TJ"/>
+                                                <constraint firstItem="je7-NA-yPN" firstAttribute="leading" secondItem="vNz-cz-Ltn" secondAttribute="leading" constant="16" id="jWy-5k-XwH"/>
+                                                <constraint firstAttribute="trailing" secondItem="uPC-Yu-mX6" secondAttribute="trailing" constant="16" id="lrm-Hw-9TJ"/>
                                                 <constraint firstItem="CKy-iY-c0e" firstAttribute="width" secondItem="je7-NA-yPN" secondAttribute="width" id="qQS-lv-cgi"/>
                                                 <constraint firstAttribute="bottom" secondItem="1ya-We-ul3" secondAttribute="bottom" constant="16" id="vJa-KV-aFq"/>
                                                 <constraint firstItem="uPC-Yu-mX6" firstAttribute="centerY" secondItem="vcv-N1-MXi" secondAttribute="centerY" id="vdF-aF-7RV"/>
-                                                <constraint firstItem="uPC-Yu-mX6" firstAttribute="top" secondItem="Hlg-Az-8Sj" secondAttribute="top" constant="16" id="x1m-gF-pk9"/>
+                                                <constraint firstItem="uPC-Yu-mX6" firstAttribute="top" secondItem="vNz-cz-Ltn" secondAttribute="top" constant="16" id="x1m-gF-pk9"/>
                                                 <constraint firstItem="uPC-Yu-mX6" firstAttribute="centerX" secondItem="vcv-N1-MXi" secondAttribute="centerX" id="xwa-Kd-Ait"/>
                                             </constraints>
                                         </collectionViewCellContentView>
@@ -131,9 +131,9 @@
                             <constraint firstItem="xOX-YD-ipi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GAm-gK-xEg"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ztD-Hm-Lg9" secondAttribute="bottom" constant="8" id="KJ5-vg-SPL"/>
                             <constraint firstItem="Oad-CI-gE2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="OB8-um-hTs"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ztD-Hm-Lg9" secondAttribute="trailing" constant="16" id="dK6-FJ-Ywc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ztD-Hm-Lg9" secondAttribute="trailing" id="dK6-FJ-Ywc"/>
                             <constraint firstItem="ztD-Hm-Lg9" firstAttribute="top" secondItem="Oad-CI-gE2" secondAttribute="bottom" constant="12" id="eCx-Is-Yqt"/>
-                            <constraint firstItem="ztD-Hm-Lg9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="hjq-Bt-v1W"/>
+                            <constraint firstItem="ztD-Hm-Lg9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="hjq-Bt-v1W"/>
                             <constraint firstItem="xOX-YD-ipi" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="nBp-b1-9Nl"/>
                             <constraint firstItem="xOX-YD-ipi" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="nms-js-oYm"/>
                         </constraints>
